@@ -17,6 +17,7 @@
 package org.springframework.boot.autoconfigure.r2dbc;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 import io.r2dbc.pool.ConnectionPool;
 import io.r2dbc.pool.ConnectionPoolConfiguration;
@@ -51,18 +52,14 @@ import org.springframework.util.StringUtils;
  * @author Mark Paluch
  * @author Stephane Nicoll
  * @author Rodolpho S. Couto
- * @author Moritz Halbritter
- * @author Andy Wilkinson
- * @author Phillip Webb
  */
 abstract class ConnectionFactoryConfigurations {
 
-	protected static ConnectionFactory createConnectionFactory(R2dbcProperties properties,
-			R2dbcConnectionDetails connectionDetails, ClassLoader classLoader,
+	protected static ConnectionFactory createConnectionFactory(R2dbcProperties properties, ClassLoader classLoader,
 			List<ConnectionFactoryOptionsBuilderCustomizer> optionsCustomizers) {
 		try {
 			return org.springframework.boot.r2dbc.ConnectionFactoryBuilder
-				.withOptions(new ConnectionFactoryOptionsInitializer().initialize(properties, connectionDetails,
+				.withOptions(new ConnectionFactoryOptionsInitializer().initialize(properties,
 						() -> EmbeddedDatabaseConnection.get(classLoader)))
 				.configure((options) -> {
 					for (ConnectionFactoryOptionsBuilderCustomizer optionsCustomizer : optionsCustomizers) {
@@ -91,12 +88,10 @@ abstract class ConnectionFactoryConfigurations {
 		static class PooledConnectionFactoryConfiguration {
 
 			@Bean(destroyMethod = "dispose")
-			ConnectionPool connectionFactory(R2dbcProperties properties,
-					ObjectProvider<R2dbcConnectionDetails> connectionDetails, ResourceLoader resourceLoader,
+			ConnectionPool connectionFactory(R2dbcProperties properties, ResourceLoader resourceLoader,
 					ObjectProvider<ConnectionFactoryOptionsBuilderCustomizer> customizers) {
 				ConnectionFactory connectionFactory = createConnectionFactory(properties,
-						connectionDetails.getIfAvailable(), resourceLoader.getClassLoader(),
-						customizers.orderedStream().toList());
+						resourceLoader.getClassLoader(), customizers.orderedStream().collect(Collectors.toList()));
 				R2dbcProperties.Pool pool = properties.getPool();
 				PropertyMapper map = PropertyMapper.get().alwaysApplyingWhenNonNull();
 				ConnectionPoolConfiguration.Builder builder = ConnectionPoolConfiguration.builder(connectionFactory);
@@ -124,11 +119,10 @@ abstract class ConnectionFactoryConfigurations {
 	static class GenericConfiguration {
 
 		@Bean
-		ConnectionFactory connectionFactory(R2dbcProperties properties,
-				ObjectProvider<R2dbcConnectionDetails> connectionDetails, ResourceLoader resourceLoader,
+		ConnectionFactory connectionFactory(R2dbcProperties properties, ResourceLoader resourceLoader,
 				ObjectProvider<ConnectionFactoryOptionsBuilderCustomizer> customizers) {
-			return createConnectionFactory(properties, connectionDetails.getIfAvailable(),
-					resourceLoader.getClassLoader(), customizers.orderedStream().toList());
+			return createConnectionFactory(properties, resourceLoader.getClassLoader(),
+					customizers.orderedStream().collect(Collectors.toList()));
 		}
 
 	}
